fixed alignment of nav bars

--- a/src/pages/initiative-display/initiative.css
+++ b/src/pages/initiative-display/initiative.css
@@ -26,10 +26,11 @@ body {
 }
 
 /* Sidebar */
-.sidebar-container {
+.sidebar-container1 {
   width: 250px;
   flex-shrink: 0;
-  margin-top: 40px;
+  margin-top: 85px;
+  padding: 63px 20px;
 }
 
 .sidebar-item:hover,
